Group constants in objects
This will make it easier to move to modules later on.

--- a/src/editor.xhtml
+++ b/src/editor.xhtml
@@ -8,7 +8,8 @@
     xmlns:internal="http://www.andonyar.com/rec/2008-12/gemse/internalns"
     title="Gemse">
     <head>
-        <script src="const.js"/>
+        <script src="namespace.js"/>
+        <script src="key.js"/>
         <script src="UString.js"/>
         <script src="gemseBase.js"/>
         <script src="views.js"/>
