Move Command Handler to its own file
This removes some bidirectional dependencies between files, making the
transition to modules easier.

--- a/src/editor.xhtml
+++ b/src/editor.xhtml
@@ -11,6 +11,7 @@
         <script src="namespace.js"/>
         <script src="key.js"/>
         <script src="UString.js"/>
+        <script src="command.js"/>
         <script src="gemseBase.js"/>
         <script src="views.js"/>
         <script src="storage.js"/>
