--- a/src/editor.xhtml
+++ b/src/editor.xhtml
@@ -11,6 +11,7 @@
         <script src="namespace.js"/>
         <script src="key.js"/>
         <script src="UString.js"/>
+        <script src="dom.js"/>
         <script src="command.js"/>
         <script src="gemseBase.js"/>
         <script src="views.js"/>
