Load module dynamically without module script
Chrome does not support script elements with `type="module"` in
XHTML.[1] In order to get the application running in Chrome too, we use
a normal script element. A normal script cannot import modules
declaratively, only modules can do that. But it is possible to load a
module dynamically, which we now do.

The application now finally works in Chrome too.

[1] https://issues.chromium.org/issues/40518469

--- a/src/editor.xhtml
+++ b/src/editor.xhtml
@@ -8,13 +8,21 @@
     xmlns:internal="http://www.andonyar.com/rec/2008-12/gemse/internalns"
     title="Gemse">
     <head>
-        <script type="module"><![CDATA[
-            import { GemsePEditor } from "./gemseBase.js";
-
+        <script><![CDATA[
             var editor;
 
             window.start = function () {
-                editor = new GemsePEditor(editorsetup);
+                // Instead of using a top-level module with attribute
+                // `type="module"` on the script tag and an import statement
+                // like
+                //   import { GemsePEditor } from "./gemseBase.js";
+                // We import the module dynamically. This is because
+                // Chrome does not support script elements with
+                // `type="module"` in XHTML.
+                // https://issues.chromium.org/issues/40518469
+                import("./gemseBase.js").then(function (module) {
+                    editor = new module.GemsePEditor(window.editorsetup);
+                });
             }
             window.editorsetup = function (editor) {
                 editor.inputElement.focus();
