Update website to reflect state of affairs

--- a/website/approach1.xhtml
+++ b/website/approach1.xhtml
@@ -12,6 +12,9 @@
 
 <h1>Gemse Approach 1: An editor for Presentation and Content MathML</h1>
 
+<p><strong>This version of Gemse no longer works. Please look out for
+<a href="./">version 2</a>!</strong></p>
+
 <p>Gemse Approach 1 is an editor for mathematical formulas using
 Presentation MathML, Content MathML or OpenMath.
 Unlike other editors, this one is neither intuitive
