--- a/website/index.xhtml
+++ b/website/index.xhtml
@@ -13,26 +13,23 @@
 <h1>Gemse, the General Math Structure Editor</h1>
 
 
-<p><strong><a href="approach1">Gemse 1.0.16</a> has been
-published!</strong></p>
+<p><strong>Gemse is currently being ported to modern browsers.</strong></p>
 
 <p>The project Gemse has been started in the need for an editor
 for mathematical formulas that is fast and can be controlled by
 keyboard only.</p>
 
-<h2><a href="approach1">Approach 1</a></h2>
+<p><a href="approach1">Version 1 of Gemse</a> has been written for Mozilla back in the days
+when it was possible to write full applications that properly integrate with
+the host OS as if they were native. Unfortunately, Mozilla decided to get
+rid of integration with foreign programming languages, the UI description
+language XUL, and the whole extension infrastructure. After this castration of
+the Mozilla platform, Gemse stayed unusable for many years. However, web
+standards have evolved in a manner that allows an application like Gemse to be
+written for every browser. This will become version 2 of Gemse.</p>
 
-<p>Actually, the first approach to this problem,
-"<a href="approach1">Gemse Approach 1</a>",
-is an editor for Presentation MathML, Content MathML and OpenMath.
-It is currently in development.</p>
-
-<h2>Version 2</h2>
-
-<p>The second version of Gemse is being planned. It will be a complete
-reimplementation and it will be capable of editing whole HTML and
-OMDoc documents. Gemse 2 will likely not use Mozilla and its ever
-lasting enforced updates, breaking APIs, and JavaScript imposition.</p>
+<p>You can track the progress in Gemse's
+<a href="https://github.com/uholzer/gemse">repository on github</a>.</p>
 
 <h2>Other solutions</h2>
 
